# bevy-animator

./: .gitignore  Cargo.toml  README.md
.zed/: tasks.json
assets/: character.aseprite  knight.aseprite
examples/: aseprite.rs  aseprite_state.rs  basic.rs
src/: animation.rs  animator.rs  aseprite.rs  id.rs  lib.rs  state.rs  util.rs
